objects/Status_Queue_Assignment_Setting__mdt.object
<CustomObject>
    <description>Case Queue Mapping for certain Statuses</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>The business unit that in combination with other fields will map to a specific queue</description>
        <inlineHelpText>The business unit that in combination with other fields will map to a specific queue</inlineHelpText>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Hudson&apos;s Bay</fullName>
                </value>
                <value>
                    <fullName>MHF</fullName>
                </value>
                <value>
                    <fullName>Lord + Taylor</fullName>
                </value>
                <value>
                    <fullName>Saks</fullName>
                </value>
                <value>
                    <fullName>Off 5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>Case Status - when changed to this status, the Case Queue will be changed</description>
        <inlineHelpText>Case Status - when changed to this status, the Case Queue will be changed</inlineHelpText>
        <label>Case Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Customer Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting Internal Response</fullName>
                </value>
                <value>
                    <fullName>Team Lead Assistance Needed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Service Excellence Review</fullName>
                </value>
                <value>
                    <fullName>POS Team</fullName>
                </value>
                <value>
                    <fullName>Pending Fraud Team</fullName>
                </value>
                <value>
                    <fullName>Response Received</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>System Issue</fullName>
                </value>
                <value>
                    <fullName>MNR Review</fullName>
                </value>
                <value>
                    <fullName>Transferred to Store Operations</fullName>
                </value>
                <value>
                    <fullName>Escalate ORC MNR Review</fullName>
                </value>
                <value>
                    <fullName>Transferred to Back Office</fullName>
                </value>
                <value>
                    <fullName>Risk Support El Salvador Team</fullName>
                </value>
                <value>
                    <fullName>Risk Support Jackson Team</fullName>
                </value>
                <value>
                    <fullName>Escalate Risk Support El Salvador Team</fullName>
                </value>
                <value>
                    <fullName>Escalate Risk Support Jackson Team</fullName>
                </value>
                <value>
                    <fullName>Escalate ORC POS Review</fullName>
                </value>
                <value>
                    <fullName>Virtual Gift Card Processing</fullName>
                </value>
                <value>
                    <fullName>POS Gift Card Processing</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Borderfree Transfer</fullName>
                    <isActive>false</isActive>
                    <label>Borderfree Transfer</label>
                </value>
                <value>
                    <fullName>Call Tag</fullName>
                    <isActive>false</isActive>
                    <label>Call Tag</label>
                </value>
                <value>
                    <fullName>Dropship Transfer</fullName>
                    <isActive>false</isActive>
                    <label>Dropship Transfer</label>
                </value>
                <value>
                    <fullName>GWP Transfer</fullName>
                    <isActive>false</isActive>
                    <label>GWP Transfer</label>
                </value>
                <value>
                    <fullName>Team Assistance Needed</fullName>
                    <isActive>false</isActive>
                    <label>Team Assistance Needed</label>
                </value>
                <value>
                    <fullName>UND Transfer</fullName>
                    <isActive>false</isActive>
                    <label>UND Transfer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BTO - Big Ticket Order (New Purchases)</fullName>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery (WISMO)</fullName>
                </value>
                <value>
                    <fullName>Delivery Resolution</fullName>
                </value>
                <value>
                    <fullName>Exchange / Return / Allowance (ERA)</fullName>
                </value>
                <value>
                    <fullName>Gift Card(s)</fullName>
                </value>
                <value>
                    <fullName>Gift Registry</fullName>
                </value>
                <value>
                    <fullName>In Store Experience</fullName>
                </value>
                <value>
                    <fullName>Major Home Fashion</fullName>
                </value>
                <value>
                    <fullName>Order Inquiry</fullName>
                </value>
                <value>
                    <fullName>Order placed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Place an order</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Refunds/Credits</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>Rewards</fullName>
                </value>
                <value>
                    <fullName>Special Projects</fullName>
                </value>
                <value>
                    <fullName>Store Experience</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Executive Escalation Only</fullName>
                </value>
                <value>
                    <fullName>Store Locator</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>New L</fullName>
                </value>
                <value>
                    <fullName>General Error</fullName>
                </value>
                <value>
                    <fullName>Hold Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account information update or question</fullName>
                </value>
                <value>
                    <fullName>Add Item to List</fullName>
                </value>
                <value>
                    <fullName>Add promotion code after purchase</fullName>
                </value>
                <value>
                    <fullName>Address Change Required</fullName>
                </value>
                <value>
                    <fullName>Allowance Request</fullName>
                </value>
                <value>
                    <fullName>Appliance Claim</fullName>
                </value>
                <value>
                    <fullName>Archived Accounts</fullName>
                </value>
                <value>
                    <fullName>Back Ordered Report</fullName>
                </value>
                <value>
                    <fullName>Better Business Bureau</fullName>
                </value>
                <value>
                    <fullName>Broken/Damaged Item</fullName>
                </value>
                <value>
                    <fullName>BTO</fullName>
                </value>
                <value>
                    <fullName>Can I cancel my order?</fullName>
                </value>
                <value>
                    <fullName>Can I change my order?</fullName>
                </value>
                <value>
                    <fullName>Can you reactivate my gift card?</fullName>
                </value>
                <value>
                    <fullName>Casper Mattress</fullName>
                </value>
                <value>
                    <fullName>Clear D</fullName>
                </value>
                <value>
                    <fullName>Credit Points Dispute</fullName>
                </value>
                <value>
                    <fullName>Customer asked for Store Information (phone number / details)</fullName>
                </value>
                <value>
                    <fullName>Customer Care Followup Alert</fullName>
                </value>
                <value>
                    <fullName>Customer Care Follow-Up Alerts (CCFU)</fullName>
                </value>
                <value>
                    <fullName>Customer preferred placing order over phone</fullName>
                </value>
                <value>
                    <fullName>Customer Reschedule Request</fullName>
                </value>
                <value>
                    <fullName>Daily Delivery Data Report</fullName>
                </value>
                <value>
                    <fullName>DC Pick Up Report</fullName>
                </value>
                <value>
                    <fullName>Defective Item</fullName>
                </value>
                <value>
                    <fullName>Delivery Not Completed Alert</fullName>
                </value>
                <value>
                    <fullName>Delivery Provider/Driver calls</fullName>
                </value>
                <value>
                    <fullName>Delivery Status Update</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t receive when expected</fullName>
                </value>
                <value>
                    <fullName>Did not receive Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ignore_Metadata_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Metadata Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_on_Executive_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, will not run process if the Case is owned by Executive Escalation (Executive_Escalation_Owner__c = true)</description>
        <inlineHelpText>When checked, will not run process if the Case is owned by Executive Escalation</inlineHelpText>
        <label>Ignore on Executive Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>The Queue that will own the Case after the Status is updated</description>
        <inlineHelpText>The Queue that will own the Case after the Status is updated</inlineHelpText>
        <label>Queue</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address Issue</fullName>
                </value>
                <value>
                    <fullName>Alterations / repairs</fullName>
                </value>
                <value>
                    <fullName>Availability / assortment of merchandise</fullName>
                </value>
                <value>
                    <fullName>Bay PLCC/Mastercard Holder</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed as customer paying with Gift Card</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed as sale ended</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed because of delivery date</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed because of the DC pick up location</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed because SKU is discontinued</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed due to competitor pricing</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed due to Out of Zone delivery cost</fullName>
                </value>
                <value>
                    <fullName>Call to MHF in error</fullName>
                </value>
                <value>
                    <fullName>Cancel at Door</fullName>
                </value>
                <value>
                    <fullName>Casper</fullName>
                </value>
                <value>
                    <fullName>Change a Reward Account Address</fullName>
                </value>
                <value>
                    <fullName>Change Rejected MOP</fullName>
                </value>
                <value>
                    <fullName>Credit Points Dispute</fullName>
                </value>
                <value>
                    <fullName>Cust /SA request for Special Delivery Arrangements</fullName>
                </value>
                <value>
                    <fullName>Cust call for Warranty/ Parts or In Home Repair</fullName>
                </value>
                <value>
                    <fullName>Customer f/up missed/cust. Waiting on update</fullName>
                </value>
                <value>
                    <fullName>Customer request for Compensation</fullName>
                </value>
                <value>
                    <fullName>Customer requests Return / Exchange out of policy</fullName>
                </value>
                <value>
                    <fullName>Custom wants to place an order</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DC Pick-Up Loc</fullName>
                </value>
                <value>
                    <fullName>Delay in issuing refund credit</fullName>
                </value>
                <value>
                    <fullName>Delivery fees</fullName>
                </value>
                <value>
                    <fullName>DP/Courier Issues (late delivery; damaged; returned to store; wrong address; left in rain)</fullName>
                </value>
                <value>
                    <fullName>DP - Driver concerns/service concerns</fullName>
                </value>
                <value>
                    <fullName>Driver call because customer Not At Home for delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Stewardship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Stewardship</label>
        <type>Checkbox</type>
    </fields>
    <label>Status Queue Assignment Setting</label>
    <listViews>
        <fullName>All_Columns</fullName>
        <columns>MasterLabel</columns>
        <columns>Case_Status__c</columns>
        <columns>Queue__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Transfer_Stewardship__c</columns>
        <columns>Ignore_Metadata_Mapping__c</columns>
        <columns>Ignore_on_Executive_Escalation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Columns</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Status Queue Assignment Settings</pluralLabel>
</CustomObject>